--- a/index.html
+++ b/index.html
@@ -1,183 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="id">
-  <head>
-    <title>Laksa19 | MIKHMON : Mikrotik Hotspot Monitor </title>
-    <meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik." />
-		<meta name="keywords" content="mikhmon,mikrotik,voucher,routeros,api mikrotik,rtrwnet, rtrw/net,hotspot,mikrotik api" />
-		<meta http-equiv="expires" content="0">
-		<meta name="robots" content="index, follow" />
-		<meta property="og:title" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor">
-		<meta property="og:description" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik.">
-		<meta property="og:image" content="https://laksa19.github.io/img/mikhmonv3.png">
-		<meta property="og:image:alt" content="Laksa19 | MIKHMON : Mikrotik Hotspot Monitor">
-		<meta property="og:type" content="website">
-	  	<meta property="og:url" content="https://laksa19.github.io">
-		<!-- jquery -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js" integrity="sha256-f6DVw/U4x2+HjgEqw5BZf67Kq/5vudRZuRkljnbF344=" crossorigin="anonymous"></script>
-		<!-- markdown -->
-		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css" > -->
-		<link rel="stylesheet" href="./assets/css/md/github-markdown.css?v1" >
-		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-		<!-- hightlight -->
-		<!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css"> -->
-		<link rel="stylesheet" href="./assets/css/highlight/vs.css">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-		<!-- iroute -->
-		<script id="iroute" src="./assets/js/jroute.js?v1.8" async></script>
-		<script async src="https://arc.io/widget.min.js#rDZc6s4f"></script>
-		<!-- favicon -->
-		<link rel="icon" href="./assets/img/favicon.ico" />
-
-	    <style>
-	    	body {
-				box-sizing: border-box;
-				min-width: 200px;
-				max-width: 980px;
-				margin: 0 auto;
-				padding: 40px;
-				background: #E8EAED;
-			content-visibility:auto;
-			}
-			@media (max-width: 750px) {
-			    body {
-			    padding: 0px;
-			    }
-			  }
-			.markdown-body .highlight pre,
-			.markdown-body pre {
-				/*solarized-dark*/
-				/*background-color: #002B36;*/
-
-				/*monokai*/
-				/*background-color: #272822;*/
-			}
-			.markdown-body{
-				background: #fff;
-			}
-			#container{
-				padding: 20px;
-				border-radius: 3px;
-				box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-			}
-			#goTop {
-			  display: none;
-			  position: fixed;
-			  bottom: 20px;
-			  right: 10px;
-			  z-index: 99;
-			  border: none;
-			  outline: none;
-			  color: white;
-			  cursor: pointer;
-			  padding: 2px;
-			  border-radius: 50%;
-			  height: 50px;
-			  width: 50px;
-			  background-color: transparent;
-			  background-image: url('./assets/img/slide-up.png');
-			  background-position:50% 50%;
-    		  background-repeat:no-repeat; 
-			}
-	    </style>
-  </head>
-  <body id="laksagit">
-  	<div id="container" class="markdown-body">
-  		<div>
-  			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- ads1 -->
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1716315177239884" data-ad-slot="9229714223"
-			 data-ad-format="auto" data-full-width-responsive="true"></ins>
-			<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-		</div>
-	  	<div id="md_header">
-	  		<h1 id="laksa19githubio-hits">Laksa19.github.io <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flaksa19.github.io" alt="Hits"></h1>
-			<p>
-				| <a href="."><strong>LAKSA19</strong></a> 
-				| <a href="./?mikhmon/v3" title="MIKHMON"><strong>MIKHMON</strong></a> 
-				| <a href="https://mikhmon.link" title="MIKHMON ONLINE Official"><strong>MIKHMON.LINK</strong></a>
-				| <a href="./?mikhmon/v3/tutorial" title="Tutorial Mikhmon V3"><strong>TUTORIAL</strong></a> 
-				| <a href="./?blog" title="Blog Mikhmon"><strong>BLOG</strong></a> 
-				| <a href="./?mikhmon/v3/voucher" title="Template voucher Mikhmon"><strong>VOUCHER</strong></a> 
-				| <a href="./?new-hotspot" title="Template login page hospot MikoTik"><strong>HOTSPOT</strong></a> 
-				| <a href="./?myqr" title="MyQR Web base QR scanner for hospot MikoTik"><strong>MYQR</strong></a> 
-				| <a href="./?jasa-setting-mikrotik" title="Jasa Setting MikoTik"><strong>JASA</strong></a> 	
-				|
-			</p>
-	  	</div>
-	  	<div id="md_body"></div>
-	  	<div class="home" style="height: auto !important; display:none;">
-			<h3 id="mikhmon">MIKHMON</h3>
-			
-	  		<p>Mikrotik Hotspot Monitor</p>
-	  		<p>Mikhmon adalah aplikasi berbasis web untuk mempermudah pengelolaan hotspot MikroTik, tanpa menggunakan radius server. <a href="./?mikhmon/v3" title="Read more..."><em>Baca selengkapnya...</em></a>
-	  		</p>
-	  		<p><img src="./img/mikhmonv3.png" alt="MIKHMON V3" title="MIKHMON V3"></p>
-			<h3 id="mikhmon-v4-beta1">MIKHMON V4 Beta1</h3>
-			<p>Silakan cek di <a href="./?mikhmon-v4-beta1" title="Mikhmon V4 Beta1">link ini</a></p>
-	  		<hr>
-	  		<h3 id="template-hotspot-mikrotik">TEMPLATE HOTSPOT MIKROTIK</h3>
-	  		<p>Template login page hotspot MikroTik</p>
-	  		<p>Template login page hotspot MikroTik, baru base on template MikroTik v6.47 gratis. <a href="./?new-hotspot" title="Read more..."><em>Baca selengkapnya...</em></a></p>
-			<p><img src="./img/new-hotspot-01.png" alt="Tamplate Hotspot Mikhmon" title="Template Hotspot Mikhmon"></p>
-			<p>Kumpulan template login page hotspot MikroTik gratis. <a href="./?templatehotspot" title="Read more..."><em>Baca selengkapnya...</em></a></p>
-	  		<p><img src="./img/template-hotspot-home.png" alt="Tamplate Hotspot Mikhmon" title="Template Hotspot Mikhmon"></p>
-	  		<hr>
-	  		<h3 id="myqr">MYQR</h3>
-	  		<p>MyQR QR Code Scanner</p>
-	  		<p>MyQR adalah QR code scanner untuk keperluan login hotspot MikroTik. <a href="./?myqr" title="Read more..."><em>Baca selengkapnya...</em></a></p>
-	  		<p><img src="./img/myqr.jpg" alt="MYQR | QR code scanner" title="MyQR | QR code scanner"></p>
-	  	</div>
-	  	<div>
-		  	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- ads2 -->
-			<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1716315177239884" data-ad-slot="2636756848"
-			 data-ad-format="auto" data-full-width-responsive="true"></ins>
-			<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-		</div>
-	  	<div id="md_footer">
-	  		<hr>
-			<p>© Laksamadi Guko 2017 - <span id="ty"></span></p>
-	  	</div>
-  	</div>
-  	<div id="goTop" title="Go to top"></div>
-
-  	<script type="text/javascript">
-	
-  		$("#ty").html(new Date().getFullYear());
-  		window.onscroll = function() {scrollChk()};
-
-		function scrollChk() {
-		  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-		    $("#goTop").fadeIn(200);
-		  } else {
-		    $("#goTop").fadeOut(200);
-		  }
-		}
-		$("#goTop").click(function(){
-			$("html, body").animate({ scrollTop: 0 }, 700);
-	        	return false;
-		})
-		
-
-// 		    $.getScript( "https://static.doubleclick.net/instream/ad_status.js", function( data, textStatus, jqxhr ) {
-// 			  console.log( textStatus );
-// 			  console.log( jqxhr.status );
-// 			}); 
-
-
-		
-		
-		//<![CDATA[function ASSetCookie(a,b,c){var d=new Date;d.setDate(d.getDate()+c);var e=escape(b)+(0==c?";path=/":"; expires="+d.toUTCString())+";path=/";document.cookie=a+"="+e}function ASGetCookie(a){var b,c,d,e=document.cookie.split(";");for(b=0;b<e.length;b++)if(c=e[b].substr(0,e[b].indexOf("=")),d=e[b].substr(e[b].indexOf("=")+1),c=c.replace(/^\s+|\s+$/g,""),c==a)return unescape(d)}function ASSetCookieAds(a,b){var c=ASGetCookie(a);void 0!=c&&""!=c?(ASTheCookieInt=parseInt(c)+1,ASSetCookie(a,ASTheCookieInt.toString(),0)):ASSetCookie(a,"1",b)}function ASMaxClick(a,b){var c=ASGetCookie(a);return void 0!=c&&parseInt(c)>=b?!0:!1}jQuery(document).ready(function(a){var b="adsShield",c=7,d=3,e=".adsShield",f=!1;ASMaxClick(b,d)&&a(e).hide("fast"),a(e).bind("mouseover",function(){f=!0}).bind("mouseout",function(){f=!1}),a(window).on("beforeunload",function(){f&&(ASMaxClick(b,d)?a(e).hide("fast"):ASSetCookieAds(b,c))})}); //]]>
-	  </script>
-
-
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Home | Design studio template</title><meta name="description" content="Page-specific description"><meta name="keywords" content="Page-specific keywords"><link rel="shortcut icon" href="favicon.ico"><link rel="shortcut icon" href="static/images/favicons/favicon.png" type="image/x-icon"><link rel="apple-touch-icon" href="static/images/favicons/apple-touch-icon.png"><link rel="apple-touch-icon-precomposed" href="static/images/favicons/apple-touch-icon-precomposed.png"><link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"><link rel="stylesheet" href="static/css/screen.min.css"><link rel="stylesheet" href="static/css/custom.min.css"></head><body><!-- $Page header--><header class="page-header js-header"><div class="page-header__inner"><div class="page-header__logo"><h1>Bak-one</h1>&nbsp;<span>One page flat template</span></div><nav class="page-header__nav js-nav"><ul><li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li><li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Portfolio</a></li><li><a class="page-header__nav-link js-anchor js-link" href="#team">About</a></li><li><a class="page-header__nav-link js-anchor js-link" href="#contact">Contact</a></li></ul></nav></div></header><!-- $Promo section--><section class="promo js-jumbo" id="home"><h2 class="promo__title">We build<span>brand</span></h2><p class="promo__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p><a class="promo__btn" href="#">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a></section><!-- $Portfolio section--><section class="portfolio js-portfolio" id="portfolio"><div class="portfolio__inner"><h2 class="portfolio__title">Portfolio</h2><p class="portfolio__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p><nav class="portfolio__filter"><ul><li class="portfolio__filter-btn is-selected js-filter" data-filter="all">All</li><li class="portfolio__filter-btn js-filter" data-filter="web">Web design</li><li class="portfolio__filter-btn js-filter" data-filter="graphic">Graphic design</li><li class="portfolio__filter-btn js-filter" data-filter="flat">Flat design</li></ul></nav><ul class="portfolio__content"><li class="portfolio__item js-item" data-cat="all flat"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Flat design</span></div></a></li><li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Web design</span></div></a></li><li class="portfolio__item js-item" data-cat="all graphic"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port3.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Graphic design</span></div></a></li><li class="portfolio__item js-item" data-cat="all graphic web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port4.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Graphic design</span></div></a></li><li class="portfolio__item js-item" data-cat="all graphic flat"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port6.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Flat design</span></div></a></li><li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port5.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Web design</span></div></a></li><li class="portfolio__item js-item" data-cat="all flat web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port1.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Flat design</span></div></a></li><li class="portfolio__item js-item" data-cat="all web"><a href="#"><img class="portfolio__item-img js-lazy" src="static/images/port2.png" alt=""><div class="portfolio__item-caption"><span class="portfolio__item-title">Example title</span><span class="portfolio__item-cat">Web design</span></div></a></li></ul></div></section><!-- $Team section--><section class="team" id="team"><div class="team__inner"><h2 class="team__title">About us</h2><p class="team__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p><div class="team__member"><img src="static/images/ava1.jpg" alt="Melanie Doe"><div class="team__member-info"><h3 class="team__member-name">Melannie Doe</h3><span class="team__member-role">Project manager</span><p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div><ul class="team__member-soc"><li><a class="team__member-icon fb" href="#">My Facebook</a></li><li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li><li><a class="team__member-icon gplus" href="#">My Google+</a></li><li><a class="team__member-icon db" href="#">I am on Dribble</a></li></ul></div><div class="team__member"><img src="static/images/ava2.jpg" alt="Jhonie Doe"><div class="team__member-info"><h3 class="team__member-name">Jhonnie Doe</h3><span class="team__member-role">Graphic designer</span><p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div><ul class="team__member-soc"><li><a class="team__member-icon fb" href="#">My Facebook</a></li><li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li><li><a class="team__member-icon gplus" href="#">My Google+</a></li><li><a class="team__member-icon db" href="#">I am on Dribble</a></li></ul></div><div class="team__member"><img src="static/images/ava3.jpg" alt="Daniel Doe"><div class="team__member-info"><h3 class="team__member-name">Daniel Doe</h3><span class="team__member-role">Web designer</span><p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></div><ul class="team__member-soc"><li><a class="team__member-icon fb" href="#">My Facebook</a></li><li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li><li><a class="team__member-icon gplus" href="#">My Google+</a></li><li><a class="team__member-icon db" href="#">I am on Dribble</a></li></ul></div></div></section><!-- $Contact section--><section class="contact" id="contact"><div class="contact__inner"><h2 class="contact__title">Contact us</h2><p class="contact__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p><form class="contact__form" action="#" method="post"><input class="contact__form-input" id="name" type="text" name="name" placeholder="Your name"> <input class="contact__form-input" id="email" type="email" name="email" placeholder="Your email"> <textarea class="contact__form-tarea" id="message" name="message" placeholder="Your message"></textarea> <input class="contact__form-submit" type="submit" value="Submit"></form><div class="contact__card vcard"><h3 class="contact__card-title">Information</h3><div class="contact__card-item place"><div class="fn org">Bak-One Company</div><div class="adr"><div class="street-address">12345 Hollywood Bvld Street</div><span class="locality">Los Angeles</span>,<span class="region">California</span></div></div><div class="contact__card-item tel">+444<span class="type">&nbsp;(Phone)&nbsp;</span>123456</div><div class="contact__card-item fax tel">+123<span class="type">&nbsp;(FAX)&nbsp;</span>0011223</div><a class="contact__card-item email" href="#">info@companyname.com</a></div></div></section><!-- $Page footer--><footer class="page-footer"><div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2013 Bak-One | One Page Flat Template</span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div></footer><script src="static/js/body.min.js"></script></body></html>
