--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="page-header js-header">
 <div class="page-header__inner">
 <div class="page-header__logo">
-<h1>Aa-Official</h1>&nbsp;<span>inject All skin MLBB</span>
+<h1>Aa-3DXAPP</h1>&nbsp;<span>inject All skin MLBB</span>
 </div>
 <nav class="page-header__nav js-nav"><ul><li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a>
 </li><li>
