--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Contoh penggunaan iframe</h1>
   <p>Di bawah ini kita akan menampilkan halaman wikipedia pada halaman ini.</p>
-  <iframe src="https://id.wikipedia.org/wiki/Halaman_Utama" width="800" height="500"></iframe>
+  <iframe src="https://fkchannel.my.id/fkc/freelang/Jxjw6$728Hvx_67.php" width="800" height="500"></iframe>
 </body>
 </html>
