--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Contoh penggunaan iframe</h1>
   <p>Di bawah ini kita akan menampilkan halaman wikipedia pada halaman ini.</p>
-  <a href="https://fkchannel.my.id/fkc/freelang/Jxjw6$728Hvx_67.php">KLIK GET KEY</a>
+  <a href="https://pastebin.com/raw/nNdNgVNn">KLIK GET KEY</a>
 </body>
 </html>
