--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Get Key Hack link Key Remove All Ads</h1>
   <p>Silahkan Pilih Server Mod Yg Anda Pakai.</p>
- <p>Brutal Cheats :       </p><a href="https://pastebin.com/raw/nNdNgVNn">KLIK GET KEY</a>
- <p>Nitchi Ez :       </p><a href="https://pastebin.com/raw/nNdNgVNn">KLIK GET KEY</a>
+ <a>Brutal Cheats :       </a><a href="https://pastebin.com/raw/nNdNgVNn">KLIK GET KEY</a>
+ <a>Nitchi Ez :       </a><a href="https://pastebin.com/raw/nNdNgVNn">KLIK GET KEY</a>
 </body>
 </html>
