--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 </div>
 <nav class="page-header__nav js-nav"><ul><li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a>
 </li><li>
-<a class="page-header__nav-link js-anchor js-link" href="#portfolio">Skin</a>
+<a class="page-header__nav-link js-anchor js-link" href="#portfolio">Unlock Skin</a>
 </li><li><a class="page-header__nav-link js-anchor js-link" href="#team">About</a>
 </li><li><a class="page-header__nav-link js-anchor js-link" href="#contact">Contact</a>
 </li></ul></nav></div></header><!-- $Promo section--><section class="promo js-jumbo" id="home">
-<h2 class="promo__title">Aa Official<span>brand</span></h2>
-<p class="promo__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-<a class="promo__btn" href="#">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
+<h2 class="promo__title">Aa Official<span>Website</span></h2>
+<p class="promo__descr">ini adalah Website Resmi Aa Channel official.</p>
+<a class="promo__btn" href="#">Get Key Now</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
 </section><!-- $Portfolio section--><section class="portfolio js-portfolio" id="portfolio"><div class="portfolio__inner">
 <h2 class="portfolio__title">Portfolio</h2>
 <p class="portfolio__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
