--- a/aa.html
+++ b/aa.html
@@ -31,7 +31,7 @@
 .tippy-content{position:relative;padding:5px 9px;z-index:1}</style>
 <link rel="canonical" href="https://linktr.ee/aachannell">
 <script>window.__lter=window.__lter||{q:window.__lter && _lter.q||[],trackEvent:function(){__lter.q.push(Array.prototype.slice.call(arguments))}}</script>
-<script id="__ltcep" data-version="2" data-url="linktr.ee/events.ssergni//:sptth" src="./@aachannell _ Linktree_files/cep.min.js.download"></script>
+<script id="__ltcep" data-version="2" data-url="linktr.ee/events.ssergni//:sptth" src="./@aachannell _ Linktree_files/cep.min.js"></script>
 <meta content="ie=edge" http-equiv="x-ua-compatible">
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <meta property="og:image:height" content="600">
@@ -66,24 +66,24 @@
 <link rel="preload" href="./@aachannell _ Linktree_files/2dcc20cde09dd41471f4.css" as="style" crossorigin="anonymous">
 <link rel="stylesheet" href="./@aachannell _ Linktree_files/2dcc20cde09dd41471f4.css" crossorigin="anonymous" data-n-p="">
 <noscript data-n-css=""></noscript>
-<script defer="" crossorigin="anonymous" nomodule="" src="./@aachannell _ Linktree_files/polyfills-d24a91e6bf74100d69e6.js.download"></script>
-<script src="./@aachannell _ Linktree_files/webpack-b3bdae50ddd8ff38dcbf.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/framework.6fff953eb0f638171baa.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/commons.cd4ea1ccd339144dd644.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/f6078781a05fe1bcb0902d23dbbb2662c8d200b3.0ccac479baa194accfab.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/main-003922069c3342a5925f.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/777cf710.6f2a6c7b254d13586ba8.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/24508a34721ec6ad74c388517aed8f62524da00c.7ca0f12c10db4603833e.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/b1542cc239bf56c8a14913c0a930efe682b5cf86.42d8526b4b69cfb6a138.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/_app-8bb3804f70e36c2f8646.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/4072747d.116e2837dea54e620698.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/1a0f24eb.0881497b9c377e220280.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/6653e76d.5ea0cfcd8c3345d5d083.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/210f95f9.77f446d38092540ba8b2.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/29107295.967f52728bfe06b39ad1.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/[profile]-c989929cc3c1a3a68e7b.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/_buildManifest.js.download" defer="" crossorigin="anonymous"></script>
-<script src="./@aachannell _ Linktree_files/_ssgManifest.js.download" defer="" crossorigin="anonymous"></script>
+<script defer="" crossorigin="anonymous" nomodule="" src="./@aachannell _ Linktree_files/polyfills-d24a91e6bf74100d69e6.js"></script>
+<script src="./@aachannell _ Linktree_files/webpack-b3bdae50ddd8ff38dcbf.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/framework.6fff953eb0f638171baa.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/commons.cd4ea1ccd339144dd644.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/f6078781a05fe1bcb0902d23dbbb2662c8d200b3.0ccac479baa194accfab.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/main-003922069c3342a5925f.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/777cf710.6f2a6c7b254d13586ba8.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/24508a34721ec6ad74c388517aed8f62524da00c.7ca0f12c10db4603833e.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/b1542cc239bf56c8a14913c0a930efe682b5cf86.42d8526b4b69cfb6a138.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/_app-8bb3804f70e36c2f8646.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/4072747d.116e2837dea54e620698.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/1a0f24eb.0881497b9c377e220280.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/6653e76d.5ea0cfcd8c3345d5d083.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/210f95f9.77f446d38092540ba8b2.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/29107295.967f52728bfe06b39ad1.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/[profile]-c989929cc3c1a3a68e7b.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/_buildManifest.js" defer="" crossorigin="anonymous"></script>
+<script src="./@aachannell _ Linktree_files/_ssgManifest.js" defer="" crossorigin="anonymous"></script>
 <style data-styled="active" data-styled-version="5.2.1"></style></head><body><div id="__next">
 <link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1)" rel="stylesheet">
 <link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1)" rel="stylesheet">
