--- a/aa.html
+++ b/aa.html
@@ -85,8 +85,8 @@
 <script src="./@aachannell _ Linktree_files/_buildManifest.js" defer="" crossorigin="anonymous"></script>
 <script src="./@aachannell _ Linktree_files/_ssgManifest.js" defer="" crossorigin="anonymous"></script>
 <style data-styled="active" data-styled-version="5.2.1"></style></head><body><div id="__next">
-<link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1)" rel="stylesheet">
-<link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1)" rel="stylesheet">
+<link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1).css" rel="stylesheet">
+<link href="./@aachannell _ Linktree_files/css2" rel="stylesheet"><link href="./@aachannell _ Linktree_files/css2(1).css" rel="stylesheet">
 <div class="sc-bdfBwQ sc-gsTCUz fGhsIW bhdLno">
 <div class="sc-bdfBwQ sc-gsTCUz bcrzgk bhdLno">
 <div class="sc-bdfBwQ LyLIy">
